--- a/app/templates/practice.html
+++ b/app/templates/practice.html
@@ -355,6 +355,7 @@
         </div>
       </div>
 
+      {% if role =="professor" or role=="admin"%}
       <h4 class="pb-2"> Milestones </h4>
 
       <div class="row">
@@ -372,11 +373,11 @@
           </div>
         {% endfor %}
       </div>
+      {% endif %}
+
+        <h4 class="pb-2">Sessions</h4>
+
       </div>
-
-
-
-
     </div>
     <!-- /.container-fluid -->
 
@@ -385,7 +386,7 @@
 
   <!-- End of Footer -->
 
-</div>
+
 <!-- End of Content Wrapper -->
 
 </div>
