Minor visual changes

--- a/app/templates/users.html
+++ b/app/templates/users.html
@@ -242,7 +242,7 @@
                   {% if not user==(element[0].email.split('@'))[0] %}
                   <div class="row">
                     <div class="col-sm">
-                      <a data-toggle="modal" data-id="{{element[0].email}}" class="modifyPrivilegeModal btn btn-light float-right" href="#modifyPrivilegeModal">Modify Privilege</a>
+                      <a data-toggle="modal" data-id="{{element[0].email}}" class="modifyPrivilegeModal btn btn-warning float-right" href="#modifyPrivilegeModal">Modify Privilege</a>
                     </div>
 
                     <script>
