--- a/app/templates/manageSubject.html
+++ b/app/templates/manageSubject.html
@@ -196,7 +196,7 @@
             Import users
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <button type="button" class="dropdown-item" data-toggle="modal" data-target="#uploadUserModal">
+            <button class="dropdown-item" data-toggle="modal" data-target="#uploadUserModal">
               <i class="fas fa-user mr-2"></i>
               Unique user
 
@@ -267,7 +267,7 @@
     <!-- end modal CSV -->
   <!-- User Modal -->
 
-    <div class="modal fade" id="uploadUserModal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="uploadUserModal modal fade" name="uploadUserModal" id="uploadUserModal" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
           <div class="modal-header">
@@ -278,7 +278,6 @@
           </div>
 
           <div class="modal-body">
-            <h6> Insert the user's data</h6>
 
             <div class="row">
               <div class="col">
@@ -286,6 +285,7 @@
                 <form action="/uploadUser" method="post" id="upload-form">
                   <div class="row pt-2 pb-2">
                     <div class="col">
+                      <label>Email</label>
                       <input class= "form-control" type="email" name="email" id="js-upload-files" placeholder="User email" enctype="multipart/form-data" >
 
                       <input type="hidden" name="subject_id" value={{subject.id}}>
@@ -298,6 +298,17 @@
                       <select class="custom-select" name="role" id="role">
                         {% for role in roles_db%}
                         <option value={{role.name}}>{{role.name}}</option>
+                        {% endfor %}
+                      </select>
+                    </div>
+                  </div>
+
+                  <div class="row pt-2 pb-2">
+                    <div class="col">
+                      <label> Group </label>
+                      <select class="custom-select" name="addGroup" id="addGroup">
+                        {% for group in groups%}
+                        <option value={{group.group_id}}>Group {{group.name}}</option>
                         {% endfor %}
                       </select>
                     </div>
@@ -441,28 +452,31 @@
                 <td class="text-center">{{users[1].name}}</td>
 
                 <td class="text-center">
-                  <div class="col-sm">
-                    <a data-toggle="modal" data-id="{{users[0].email}}" data-groupings="{{groupings_json}}" data-groups="{{groups_json}}" data-subject-id="{{subject.id}}" class="modifyGroupingGroup btn btn-light" href="#">Modify Group</a>
 
-                  </div>
 
-                  {% if not user==(users[0].email.split('@'))[0]%}
                   <div class="row">
-                    {% if role=='admin'%}
-                    <div class="col-sm">
+                    <div class="col">
+                      <a data-toggle="modal" data-id="{{users[0].email}}" data-groupings="{{groupings_json}}" data-groups="{{groups_json}}" data-subject-id="{{subject.id}}" class="modifyGroupingGroup btn btn-warning" href="#">Modify Group</a>
 
-                      <a data-toggle="modal" data-id="{{users[0].email}}" class="modifyUserModal btn btn-light" href="#modifyUserModal">Modify Role</a>
+                    </div>
+                    {% if not user==(users[0].email.split('@'))[0]%}
+                    {% if role=='admin'%}
+                    <div class="col">
+
+                      <a data-toggle="modal" data-id="{{users[0].email}}" class="modifyUserModal btn btn-info" href="#modifyUserModal">Modify Role</a>
 
                     </div>
                     {% endif %}
 
                     <script>
-                    $(document).ready(function () {
-                      $(document).on("click", ".modifyUserModal", function () {
-                           var userEmail = $(this).data('id');
-                           $(".modal-body #email").val( userEmail );
-                      });
-                    });
+
+                    $('.modifyUserModal').click( function (evt) {
+                          evt.stopImmediatePropagation();
+                          $("#modifyUserModal").modal()
+
+                          var userEmail = $(this).data('id');
+                          $(".modal-body #email").val( userEmail );
+                        });
 
                     $('.modifyGroupingGroup').click( function (evt) {
                           evt.stopImmediatePropagation();
@@ -483,21 +497,21 @@
                         }
 
                           $(".modal-body #email").val( userEmail );
-
                     });
 
 
                     </script>
 
-                    <div class="col-sm text-center">
+                    <div class="col text-center">
                       <form action="/deleteUserSubject" method="POST">
                           <input type="hidden" name="user_id" value={{users[0].id}} >
                           <input type="hidden" name="subject_id" value={{subject.id}}>
                           <button type="submit" class="btn btn-secondary ">Delete</button>
                       </form>
                     </div>
-                  </div>
+
                   {% endif %}
+                  </div>
                 </td>
               </tr>
             {% endfor%}
